--- a/login.html
+++ b/login.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My app</title>
+  <title>The Login</title>
 </head>
 <body>
-  <h1>this is my app!</h1>
-  <div>This is a status!</div>
-  <h2>Hahaha</h2>
-  <h3>Mywahahaha</h3>
+  <div>
+    <h1>Dickusminiscus</h1>
+  </div>
 </body>
 </html>
